--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,13 @@ buildscript {
     }
 }
 
+
+ext.support_version = "26.0.0-beta2"
+ext.arch_version = "1.0.0-alpha4"
+ext.retrofit_version = "2.3.0"
+ext.glide_version = "4.0.0-RC1"
+ext.dagger_version = "2.11"
+
 allprojects {
     repositories {
         google()
