--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.0-alpha6'
+        classpath 'com.android.tools.build:gradle:3.0.0-alpha7'
         
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -19,7 +19,7 @@ buildscript {
 ext.support_version = "26.0.0-beta2"
 ext.arch_version = "1.0.0-alpha4"
 ext.retrofit_version = "2.3.0"
-ext.glide_version = "4.0.0-RC1"
+ext.glide_version = "3.7.0"
 ext.dagger_version = "2.11"
 
 allprojects {
