--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,4 +49,5 @@ dependencies {
     annotationProcessor "com.google.dagger:dagger-android-processor:$dagger_version"
     annotationProcessor "com.google.dagger:dagger-compiler:$dagger_version"
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    debugCompile 'com.amitshekhar.android:debug-db:1.0.1'
 }
