detail GanHuo page can load category data.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,6 +10,14 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+
+        // used by Room, to test migrations
+        javaCompileOptions {
+            annotationProcessorOptions {
+                arguments = ["room.schemaLocation":
+                                     "$projectDir/schemas".toString()]
+            }
+        }
     }
 
     dataBinding {
@@ -38,6 +46,7 @@ dependencies {
     implementation "android.arch.persistence.room:runtime:$arch_version"
     implementation "android.arch.lifecycle:runtime:$arch_version"
     implementation "android.arch.lifecycle:extensions:$arch_version"
+    implementation "android.arch.lifecycle:reactivestreams:$arch_version"
     annotationProcessor "android.arch.persistence.room:compiler:$arch_version"
     annotationProcessor "android.arch.lifecycle:compiler:$arch_version"
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
@@ -50,4 +59,6 @@ dependencies {
     annotationProcessor "com.google.dagger:dagger-compiler:$dagger_version"
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     debugCompile 'com.amitshekhar.android:debug-db:1.0.1'
+    implementation "io.reactivex.rxjava2:rxjava:2.1.2"
+    implementation "android.arch.persistence.room:rxjava2:$arch_version"
 }
