update support lib version and arch lib version.

--- a/build.gradle
+++ b/build.gradle
@@ -16,9 +16,9 @@ buildscript {
 }
 
 
-ext.support_version = "26.0.0-beta1"
+ext.support_version = "26.0.0"
 ext.constraint_layout_version = "1.0.2"
-ext.arch_version = "1.0.0-alpha4"
+ext.arch_version = "1.0.0-alpha8"
 ext.retrofit_version = "2.3.0"
 ext.glide_version = "3.7.0"
 ext.dagger_version = "2.11"
